add archive project and get all archived project list api
